--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="user">用户</string>
     <string name="admin">管理员</string>
     <string name="login">登录</string>
+    <string name="returnTo">返回</string>
     <string name="register">注册</string>
     <string name="registerTip">没有账号？现在注册</string>
 </resources>
