--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="delete">删除</string>
     <string name="testLabelName">111啧啧啧Jfdfdfdasfdsafdsasfdsafjkl</string>
     <string name="testTime">2019–10–11 12:11:00</string>
+    <string name="add">添加</string>
 </resources>
