finish!!! but there are still some issues to change

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="testLabelName">111啧啧啧Jfdfdfdasfdsafdsasfdsafjkl</string>
     <string name="testTime">2019–10–11 12:11:00</string>
     <string name="add">添加</string>
+    <string name="generate">生成识别模型</string>
 </resources>
